--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^13.0.0",
+    "element-plus": "^2.9.7",
     "lodash-es": "^4.17.21",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
@@ -44,6 +45,8 @@
     "oxlint": "^0.15.10",
     "prettier": "^3.5.1",
     "typescript": "~5.7.3",
+    "unplugin-auto-import": "^19.1.2",
+    "unplugin-vue-components": "^28.4.1",
     "vite": "^6.1.0",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.0.5",
