--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "npm-run-all2": "^7.0.2",
     "oxlint": "^0.15.10",
     "prettier": "^3.5.1",
+    "sass": "^1.86.3",
     "typescript": "~5.7.3",
     "unplugin-auto-import": "^19.1.2",
     "unplugin-vue-components": "^28.4.1",
