--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "dependencies": {
     "@vueuse/core": "^13.0.0",
     "element-plus": "^2.9.7",
+    "exceljs": "^4.4.0",
     "lodash-es": "^4.17.21",
     "pinia": "^3.0.1",
+    "unocss": "66.1.0-beta.12",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
