--- a/package.json
+++ b/package.json
@@ -10,26 +10,32 @@
   "main": "index.js",
   "scripts": {
     "test": "pnpm test:unit",
+    "build": "pnpm -r run build",
     "test:unit": "vitest --project unit",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "postinstall": "simple-git-hooks"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "vue": "catalog:"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.16.2",
-    "@types/node": "^22.15.2",
-    "esbuild": "^0.25.3",
-    "eslint": "^9.30.1",
-    "jsdom": "^26.1.0",
-    "lint-staged": "^16.1.2",
-    "picocolors": "^1.1.1",
-    "prettier": "^3.5.3",
-    "simple-git-hooks": "^2.13.0",
-    "typescript": "^5.8.3",
-    "vitest": "^3.2.4"
+    "@antfu/eslint-config": "catalog:",
+    "@rollup/plugin-json": "catalog:",
+    "@types/node": "catalog:",
+    "eslint": "catalog:",
+    "eslint-plugin-format": "catalog:",
+    "jsdom": "catalog:",
+    "lint-staged": "catalog:",
+    "picocolors": "catalog:",
+    "prettier": "catalog:",
+    "rollup": "catalog:",
+    "rollup-plugin-dts": "catalog:",
+    "rollup-plugin-esbuild": "catalog:",
+    "rollup-plugin-pure": "catalog:",
+    "simple-git-hooks": "catalog:",
+    "typescript": "catalog:",
+    "vitest": "catalog:"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged",
