--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,2 +1,21 @@
 packages:
   - 'packages/*'
+
+catalog:
+  '@antfu/eslint-config': ^4.16.2
+  '@rollup/plugin-json': ^6.1.0
+  '@types/node': ^22.15.2
+  eslint: ^9.30.1
+  eslint-plugin-format: ^1.0.1
+  jsdom: ^26.1.0
+  lint-staged: ^16.1.2
+  picocolors: ^1.1.1
+  prettier: ^3.5.3
+  rollup: ^4.46.2
+  rollup-plugin-dts: ^6.2.1
+  rollup-plugin-esbuild: ^6.2.1
+  rollup-plugin-pure: ^0.4.0
+  simple-git-hooks: ^2.13.0
+  typescript: ^5.8.3
+  vitest: ^3.2.4
+  vue: ^3.5.13
