--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,25 @@
-dist
 .DS_Store
+.idea
+.nuxt
+.temp
+*.log
+*.tgz
+components.d.ts
+components.d.[cm]ts
+dist
 node_modules
 coverage
 temp
-explorations
-TODOs.md
-*.log
-.idea
+TODO.md
+cache
+packages/**/*.js
+packages/**/*.[cm]js
+packages/**/*.d.ts
+packages/**/*.d.[cm]ts
+!packages/.vitepress/
+!packages/.vitepress/shims.d.ts
+types
 .eslintcache
-dts-build/packages
-*.tsbuildinfo
-*.tgz
+.vitepress/cache
+
+packages/**/__screenshots__
