--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "@fun/core",
+  "name": "@daily-fun/core",
   "type": "module",
   "version": "1.0.0",
-  "description": "@fun/core",
+  "description": "@daily-fun/core",
   "sideEffects": false,
   "exports": {
-    ".": "./index.mjs",
-    "./*": "./*"
+    ".": "./dist/index.mjs",
+    "./*": "./dist/*"
   },
-  "main": "./index.mjs",
-  "module": "./index.mjs",
-  "unpkg": "./index.iife.min.js",
-  "jsdelivr": "./index.iife.min.js",
-  "types": "./index.d.mts",
-  "files": [
-    "*.d.mts",
-    "*.js",
-    "*.mjs"
-  ],
+  "main": "./dist/index.mjs",
+  "module": "./dist/index.mjs",
+  "unpkg": "./dist/index.iife.min.js",
+  "jsdelivr": "./dist/index.iife.min.js",
+  "types": "./dist/index.d.mts",
+  "files": ["dist"],
   "scripts": {
     "build": "rollup --config=rollup.config.ts --configPlugin=rollup-plugin-esbuild",
     "prepack": "pnpm run build"
@@ -26,6 +22,6 @@
     "vue": "^3.5.0"
   },
   "dependencies": {
-    "@fun/shared": "workspace:*"
+    "@daily-fun/shared": "workspace:*"
   }
 }
