--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,13 +4,21 @@ packages:
 
 catalog:
   '@antfu/eslint-config': ^4.16.2
+  '@iconify/json': ^2.2.365
   '@rollup/plugin-json': ^6.1.0
+  '@tsconfig/node20': ^20.1.3
   '@types/node': ^22.15.2
+  '@vitejs/plugin-vue': ^6.0.1
+  '@vitejs/plugin-vue-jsx': ^5.0.1
+  '@vue/tsconfig': ^0.7.0
+  element-plus: ^2.10.1
   eslint: ^9.30.1
   eslint-plugin-format: ^1.0.1
   jsdom: ^26.1.0
   lint-staged: ^16.1.2
+  npm-run-all2: ^8.0.4
   picocolors: ^1.1.1
+  pinia: ^3.0.3
   prettier: ^3.5.3
   rollup: ^4.46.2
   rollup-plugin-dts: ^6.2.1
@@ -18,5 +26,12 @@ catalog:
   rollup-plugin-pure: ^0.4.0
   simple-git-hooks: ^2.13.0
   typescript: ^5.8.3
+  unocss: ^66.4.0
+  unplugin-element-plus: ^0.10.0
+  unplugin-vue-router: ^0.14.0
+  vite: ^7.0.6
+  vite-plugin-vue-devtools: ^8.0.0
   vitest: ^3.2.4
   vue: ^3.5.13
+  vue-router: ^4.5.1
+  vue-tsc: ^3.0.4
