--- a/playground/package.json
+++ b/playground/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "echo \"[skip] playground build is disabled\" && exit 0",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build"
@@ -16,7 +16,7 @@
   "dependencies": {
     "@daily-fun/components": "workspace:^",
     "@daily-fun/core": "workspace:^",
-    "element-plus": "catalog:",
+    "ant-design-vue": "catalog:",
     "pinia": "catalog:",
     "vue": "catalog:",
     "vue-router": "catalog:"
@@ -29,7 +29,6 @@
     "@vue/tsconfig": "catalog:",
     "npm-run-all2": "catalog:",
     "typescript": "catalog:",
-    "unplugin-element-plus": "catalog:",
     "unplugin-vue-router": "catalog:",
     "vite": "catalog:",
     "vite-plugin-vue-devtools": "catalog:",
