--- a/package.json
+++ b/package.json
@@ -18,9 +18,6 @@
     "lint:fix": "eslint --fix",
     "postinstall": "simple-git-hooks"
   },
-  "dependencies": {
-    "vue": "catalog:"
-  },
   "devDependencies": {
     "@antfu/eslint-config": "catalog:",
     "@iconify/json": "catalog:",
@@ -39,7 +36,8 @@
     "simple-git-hooks": "catalog:",
     "typescript": "catalog:",
     "unocss": "catalog:",
-    "vitest": "catalog:"
+    "vitest": "catalog:",
+    "vue": "catalog:"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged",
