--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -15,6 +15,7 @@ catalog:
   ant-design-vue: ^4.2.6
   eslint: ^9.32.0
   eslint-plugin-format: ^1.0.1
+  gray-matter: ^4.0.3
   jsdom: ^26.1.0
   lint-staged: ^16.1.2
   npm-run-all2: ^8.0.4
@@ -26,6 +27,7 @@ catalog:
   rollup-plugin-esbuild: ^6.2.1
   rollup-plugin-pure: ^0.4.0
   simple-git-hooks: ^2.13.0
+  tinyglobby: ^0.2.14
   typescript: ^5.8.3
   unocss: ^66.4.0
   unplugin-vue-router: ^0.14.0
