--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,6 +7,7 @@ catalog:
   '@antfu/eslint-config': ^5.0.0
   '@iconify/json': ^2.2.365
   '@rollup/plugin-json': ^6.1.0
+  '@shikijs/vitepress-twoslash': ^3.9.2
   '@tsconfig/node20': ^20.1.3
   '@types/node': ^22.15.2
   '@vitejs/plugin-vue': ^6.0.1
