--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -34,7 +34,7 @@ catalog:
   unplugin-vue-router: ^0.14.0
   vite: ^7.0.6
   vite-plugin-vue-devtools: ^8.0.0
-  vitepress: ^1.6.3
+  vitepress: ^2.0.0-alpha.9
   vitest: ^3.2.4
   vue: ^3.5.13
   vue-router: ^4.5.1
