--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,6 +5,7 @@ packages:
 
 catalog:
   '@antfu/eslint-config': ^5.0.0
+  '@clack/prompts': ^0.11.0
   '@iconify/json': ^2.2.365
   '@rollup/plugin-json': ^6.1.0
   '@shikijs/vitepress-twoslash': ^3.9.2
