chore: deps with tsdown

--- a/package.json
+++ b/package.json
@@ -36,12 +36,9 @@
     "lint-staged": "catalog:",
     "picocolors": "catalog:",
     "prettier": "catalog:",
-    "rollup": "catalog:",
-    "rollup-plugin-dts": "catalog:",
-    "rollup-plugin-esbuild": "catalog:",
-    "rollup-plugin-pure": "catalog:",
     "simple-git-hooks": "catalog:",
     "tinyglobby": "catalog:",
+    "tsdown": "catalog:",
     "typescript": "catalog:",
     "unocss": "catalog:",
     "vite": "catalog:",
