--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "docs": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
-    "play": "cd playground && pnpm dev",
-    "build": "pnpm -r run build",
-    "build:watch": "pnpm -r --parallel run build --watch",
+    "demo": "pnpm --filter @daily-fun/demo dev",
+    "build": "pnpm --filter './packages/**' run build",
+    "build:watch": "pnpm --filter './packages/**' --parallel run build --watch",
     "test": "pnpm test:unit",
     "test:unit": "vitest --project unit",
     "lint": "eslint",
