--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,16 +1,21 @@
 packages:
   - 'packages/*'
   - 'apps/*'
-  - playground
   - docs
 
 catalog:
   '@antfu/eslint-config': ^5.0.0
+  '@babel/generator': ^7.28.5
+  '@babel/parser': ^7.28.5
+  '@babel/traverse': ^7.28.5
+  '@babel/types': ^7.28.5
   '@clack/prompts': ^0.11.0
   '@iconify/json': ^2.2.365
   '@rollup/plugin-json': ^6.1.0
   '@shikijs/vitepress-twoslash': ^3.9.2
   '@tsconfig/node20': ^20.1.3
+  '@types/babel__generator': ^7.27.0
+  '@types/babel__traverse': ^7.28.0
   '@types/node': ^22.15.2
   '@vitejs/plugin-vue': ^6.0.1
   '@vitejs/plugin-vue-jsx': ^5.0.1
