--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -4,13 +4,12 @@
   "version": "0.0.0",
   "private": true,
   "engines": {
-    "node": "^20.18.0"
+    "node": ">=20.18.0"
   },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "type-check": "vue-tsc --build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@daily-fun/components": "workspace:^",
@@ -22,12 +21,9 @@
     "vue-router": "catalog:"
   },
   "devDependencies": {
-    "@tsconfig/node20": "catalog:",
-    "@types/node": "catalog:",
     "@vitejs/plugin-vue": "catalog:",
     "@vitejs/plugin-vue-jsx": "catalog:",
     "@vue/tsconfig": "catalog:",
-    "npm-run-all2": "catalog:",
     "typescript": "catalog:",
     "unplugin-vue-router": "catalog:",
     "vite-plugin-vue-devtools": "catalog:",
